test_suite/alan-2022-examples/failing/005910_mutation.alan
source bc begin leave 6 <= leave 92989 end
